# code-configs

./: README.md
docs/: editor-setup.md  python-tooling.md
templates/.claude/: .claude.json  README.md  settings.json
templates/.claude/agents/: code-simplifier.md  codebase-search.md  tech-docs-writer.md  technical-debt-manager.md
templates/.claude/hooks/: format-python.py  guard-dangerous-commands.py  pre-commit.py  protect-secrets.py  scan-prompt-secrets.py
templates/.cursor/: README.md  cli-config.json  hooks.json  mcp.json
templates/.cursor/agents/: code-simplifier.md  codebase-search.md  tech-docs-writer.md  technical-debt-manager.md
templates/.cursor/commands/: interview.md
templates/.cursor/hooks/: format-python.py  guard-dangerous-commands.py  pre-commit.py  protect-secrets.py  scan-prompt-secrets.py
templates/.cursor/skills/langchain-docs-router/: SKILL.md
templates/ghostty/: config
templates/git_hooks/: README.md  install-hooks.sh  pre-commit  pre-push
templates/opencode/: opencode.json
templates/opencode/agents/: code-reviewer.md  code-simplifier.md  tech-docs-writer.md  technical-debt-manager.md
templates/opencode/plugins/: bash-danger-guard.ts  format-python.ts  guard-dangerous-commands.ts  prompt-redaction-guard.ts  ruff-auto-fix.ts  scan-prompt-secrets.ts
templates/pyproject/: pyproject.toml
templates/vscode/: settings.json
