# Quick-start:
#   uv init --name my-project
#   uv sync
#   uv run pytest
#   uv run ruff check .
#   uv run ruff format .


# Dev-only deps — installed automatically by `uv sync`
[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.5",
    "mypy>=1.13",
    "pre-commit>=4",
]

# [project.scripts]
# my-cli = "my_project.cli:main"

[tool.uv]
python-preference = "managed"


# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py313"
line-length = 180
indent-width = 4

exclude = [
    "tests/*",
    "*.ipynb",
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".ruff_cache",
    ".pytest_cache",
    "dist",
    "build",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 50

[tool.ruff.lint]
select = [
    # Tier 1 — core
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RUF", # Ruff-specific rules
    # Tier 2 — code quality
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "PERF", # perflint
    "FURB", # refurb
    # "T20",  # flake8-print
    "RET", # flake8-return
    "PT",  # flake8-pytest-style
    "TC",  # flake8-type-checking
    # Tier 3 — DS-specific
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "ICN", # flake8-import-conventions
    "PD",  # pandas-vet
    "NPY", # NumPy-specific rules
    "DTZ", # flake8-datetimez
    "FLY", # flynt (f-string enforcement)
    "FA",  # flake8-future-annotations
    # Utility
    "LOG", # flake8-logging
    "TID", # flake8-tidy-imports
]


ignore = [
    "E501",  # line too long — handled by formatter
    "PD002", # inplace=True — common in DS pipelines
    "PD008", # .at[] — valid accessor
    "PD009", # .iat[] — valid accessor
    "PD010", # .pivot_table() vs .pivot()
    "PD013", # .stack() vs .melt()
    "PD015", # pd.merge() vs .merge()
    "B008",  # function calls in default args
    "B905",  # zip() without strict=
]

# # ability to remove specific files and specific qa # in ruff consideration
# [tool.ruff.lint.per-file-ignores]
# "tests/**/*.py" = ["T20", "S101"]
# "notebooks/**/*.py" = ["T20", "E402"]

# # TODO: Would update this to your project
# [tool.ruff.lint.isort]
# known-first-party = ["my_project"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-x", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that hit external services",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:httpx",
    "ignore::DeprecationWarning:snowflake.connector.vendored.urllib3.contrib.pyopenssl",
    "ignore::UserWarning:pydantic._internal._config",
    # Ignore extra_headers warnings from OpenAI client
    "ignore:.*extra_headers.*is not default parameter.*:UserWarning",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "**/__init__.py",
    "setup.py",
    "conftest.py",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0 # raise this once you have a test suite (e.g. 80)
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "notebooks/", "scripts/", "examples/", "static/"]
